to top btn, repair side nav on mobile version

--- a/css/main.css
+++ b/css/main.css
@@ -404,7 +404,7 @@ input::placeholder {
 
 
 .sidebar {
-    height: 100%;
+    height: 220px;
     width: 0;
     position: fixed;
     opacity: 0.9;
@@ -412,16 +412,15 @@ input::placeholder {
     top: 0;
     right: 0;
     background-color: #FAFAFA;
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
     transition: 0.2s;
-    padding-top: 60px;
+    padding-top:50px;
     box-shadow: 0px 5.5px 5px rgba(0, 0, 0, 0.24), 0px 9px 18px rgba(0, 0, 0, 0.18);
 }
 
 .sidebar a {
-    padding: 8px 8px 8px 32px;
+    padding: 8px 8px 8px ;
     text-decoration: none;
-
     color: #555555;
     display: block;
     transition: 0.3s;
@@ -459,6 +458,30 @@ input::placeholder {
 }
 
 
+
+.footer__top{
+    height: 30px;
+    
+   
+    display: flex;
+    justify-content: center;
+    
+};
+
+
+.ToTopBtn{
+    margin-top: 32px;
+    border-radius: 25px;
+    cursor: pointer;
+    outline: none;
+    border: 0;
+    background: #592D87;
+    width: 154px;
+    height: 38px;
+    color: white;
+    font-family: Roboto;
+    font-size: 13px;
+}
 
 
 @media (min-width: 310px) and (max-width: 372.98px){
@@ -521,9 +544,7 @@ input::placeholder {
         font-size: 18px;
     }
 
-    #main {
-
-    }
+  
 
     .logistic{
         padding-top: 10px;
@@ -535,12 +556,10 @@ input::placeholder {
 }
 
 
-
-
 @media (max-width: 575.98px) {
 
     .top{
-        display: none
+        /* display: none */
     }
 
     #offer__truck {
@@ -582,7 +601,6 @@ input::placeholder {
         flex-direction: column;
 
     }
-
 
 
     .taobao__line-left {
@@ -672,20 +690,13 @@ input::placeholder {
         display: none
     }
 
-    #main {
 
+    .sidebar{
+        /* display: none */
     }
 
-    .sidebar {
-        height: 220px;
-        opacity: 0.9;
-        width: 180px;
-
-    }
-
-    .sidebar a {
-        padding-left: 5px;
-        padding-top: 1px;
+    .openbtn{
+        /* display: none */
     }
 
  
@@ -693,9 +704,6 @@ input::placeholder {
         width: 150px
     }
 
-    td img{
-    
-    }
 
     th p{
   
@@ -705,9 +713,7 @@ input::placeholder {
        
     }
 
-    .table__diff{
   
-    }
 
     .vetrtical-big{
         display: none
@@ -836,9 +842,9 @@ input::placeholder {
 
     }
 
-    .sidebar{
+    /* .sidebar{
         height: 250px;
-    }
+    } */
 
 }
 
